# nova

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  Makefile  NOVA_PLAN.md  README.md  ROADMAP.md  TODOS.md  docker-compose.gpu.yml  docker-compose.models.yml  docker-compose.rocm.yml  docker-compose.yml  index.html  install  mise.toml  package-lock.json  package.json  screenpipe_bridge  start  todo.txt
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  automations.py  compaction.py  config.py  consents.py  conversations.py  curated_models.py  db.py  hardware.py  ingest_backfill.py  ingest_jobs.py  ingest_worker.py  instances.py  leader.py  main.py  mcp_client.py  mcp_servers.py  media_client.py  media_ingests.py  model_recs.py  model_warmer.py  models_catalog.py  narration.py  notify.py  push.py  recommendations.py  router_chat.py  router_system.py  router_voice.py  rules.py  scheduler.py  schemas.py  settings_store.py  source_subscriptions.py  sysmon.py  timefmt.py  trace.py  voiceprints.py
backend/app/agents/: registry.py  runner.py  seeds.py
backend/app/llm/: ollama_client.py  openai_compat.py  openrouter_client.py  providers.py  router.py
backend/app/memory/: index.py  memory.py  store.py
backend/app/migrations/: 001_conversations.sql  002_agents.sql  003_tools.sql  004_seed_agents.sql  005_update_seed_models.sql  006_seed_ingestion_agent.sql  007_freshness_policy.sql  008_refresh_by_item_id.sql  009_research_mode.sql  010_db_tool_grants.sql  011_conversation_summary.sql  012_settings.sql  013_automations.sql  014_rules.sql  015_main_routing_rules.sql  016_model_manager.sql  017_default_model_glm.sql  018_curated_models.sql  019_act_dont_narrate.sql  020_delete_capability_system_agents.sql  021_get_weather_tool.sql  022_voice_model_tiers.sql  023_frontier_catalog_refresh.sql  024_persona_pass.sql  025_automation_runs.sql  026_automation_timeout_digest_fix.sql  027_memory_tag_hygiene.sql  028_turn_traces.sql  029_consents.sql  030_consent_hardening.sql  031_mcp_servers.sql  032_recommendations.sql  033_media_ingests.sql  034_media_ingestion_agent.sql  035_tag_hygiene_specific_subjects.sql  036_ingest_media_no_chunk_short.sql  037_grant_raise_recommendation.sql  038_grant_notify_operator.sql  039_source_subscriptions.sql  040_follow_source.sql  (+9 more)
backend/app/tools/: builtin.py  http_executor.py  registry.py  web_fetch.py  web_search.py
browser-worker/: Dockerfile  pyproject.toml
browser-worker/app/: browser.py  config.py  main.py  routes.py
browser-worker/tests/: test_browser_smoke.py
memory-service/: Dockerfile  pyproject.toml  requirements.txt
memory-service/app/: config.py  db.py  embed.py  embedding.py  extraction.py  health.py  http_client.py  ingestion.py  main.py  memory_router.py  redis_client.py  router.py  store.py  worker.py
memory-service/app/backends/: __init__.py  base.py  engram_backend.py
memory-service/app/db/: database.py  schema.sql
memory-service/app/engram/: activation.py  clustering.py  consolidation.py  cortex_stimulus.py  decomposition.py  entity_resolution.py  ingestion.py  router.py  (+5 more)
memory-service/scripts/: audit_cross_tenant_edges.py  perf_baseline.py  setup_test_db.py
memory-service/tests/: README.md  _llm_prompt_norm.py  _snapshot.py  conftest.py  conftest_legacy.py  test_activation.py  test_activation_characterization.py  test_clustering.py  test_conftest_smoke.py  test_consolidation_characterization.py  test_consolidation_unit.py  test_cortex_stimulus.py  test_decomposition.py  test_embedding_cache.py  test_entity_resolution.py  test_extraction_fallback.py  test_factories.py  test_fake_llm.py  test_fake_llm_record.py  test_graph_builder.py  test_ingestion_queue.py  test_ingestion_unit.py  test_llm_prompt_norm.py  test_neural_router_serve.py  test_neural_router_train.py  test_okf_backend.py  test_outcome_feedback_symmetry.py  test_reconstruction.py  test_retrieval_logger.py  test_snapshot.py  test_source_kind_mapping.py  test_working_memory.py  test_working_memory_p9.py
nova-contracts/: pyproject.toml
nova-contracts/nova_contracts/: __init__.py  engram.py  feature_flags.py  feature_flags_http.py  feature_flags_pubsub.py  feature_flags_testing.py  llm.py  memory.py  models.py  orchestrator.py  tier.py
recovery-service/: Dockerfile  pyproject.toml
recovery-service/app/: backup.py  compose_client.py  docker_client.py  env_manager.py  factory_reset.py  main.py  redis_client.py  routes.py  troubleshoot.py
recovery-service/tests/: test_check_admin.py  test_docker_client.py
screenpipe-bridge/: Dockerfile  pyproject.toml
screenpipe-bridge/app/: config.py  denylist.py  engram_producer.py  ingestion_producer.py  main.py  metrics.py  runtime_config.py  screenpipe_client.py  session_aggregator.py  tenant.py
screenpipe-bridge/tests/: test_backpressure_drop.py  test_dedup_within_session.py  test_denylist_filtering_app.py  test_denylist_filtering_url.py  test_denylist_filtering_window.py  test_engram_ingestion_payload.py  test_ingestion_payload.py  test_pause_resume.py  test_polling_fallback.py  test_runtime_config_change.py  test_screenpipe_bridge_health.py  test_session_aggregation.py  test_session_cap_30min.py  test_short_session_drop.py  test_tenant_id_propagation.py  test_websocket_reconnect.py
(+911 files in other folders)
