[project]
name = "browser-worker"
version = "0.1.0"
description = "Playwright browser-automation worker for Nova — navigate, read, act, submit forms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "playwright==1.48.0",
    "nova-contracts",
    "nova-worker-common",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
