[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-memory-service"
version = "0.1.0"
description = "Nova Memory Service — PostgreSQL + pgvector unified memory backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "nova-contracts",
    "nova-worker-common",
    "tiktoken>=0.7",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "torch>=2.0,<3.0",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "schemathesis>=3.27",
]

# Local sibling packages — same pattern used by orchestrator and cortex.
# Production Docker build still uses pip-install of the copied directories
# (see Dockerfile); this block makes `uv sync` work from a developer worktree
# without the Docker build round-trip.
[tool.uv.sources]
nova-contracts = { path = "../nova-contracts", editable = true }
nova-worker-common = { path = "../nova-worker-common", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["app"]
