[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-memory-service"
version = "0.1.0"
description = "Nova Memory Service — OKF markdown-bundle memory backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nova-contracts",
    "nova-worker-common",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "schemathesis>=3.27",
]

# Local sibling packages — same pattern used by orchestrator and cortex.
# Production Docker build still uses pip-install of the copied directories
# (see Dockerfile); this block makes `uv sync` work from a developer worktree
# without the Docker build round-trip.
[tool.uv.sources]
nova-contracts = { path = "../nova-contracts", editable = true }
nova-worker-common = { path = "../nova-worker-common", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["app"]
