[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-contracts"
version = "0.1.0"
description = "Shared Pydantic contracts for Nova AI platform services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["nova_contracts"]
