[project]
name = "nova-recovery"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "docker>=7.0",
    "PyJWT>=2.8",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
