[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-screenpipe-bridge"
version = "0.1.0"
description = "Screenpipe capture ingestion bridge for Nova"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nova-contracts",
    "websockets>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
